--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^1.2.1",
+    "grunt-svgstore": "^1.0.0",
     "jit-grunt": "^0.10.0",
     "node-sass": "^4.5.3"
   }
